opam-version: "2.0"
synopsis: "Network Block Device (NBD) protocol implementation"
description: """
This library allows applications to export and consume block
devices using the NBD protocol (as used by Linux, qemu etc)"""
maintainer: "jonathan.ludlam@citrix.com"
authors: ["Jonathan Ludlam" "David Scott" "Thomas Sanders"]
license: "LGPL-2 with OCaml linking exception"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/xapi-project/nbd"
doc: "https://xapi-project.github.io/nbd/nbd-lwt-unix/index.html"
bug-reports: "https://github.com/xapi-project/nbd/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "jbuilder" {build}
  "cstruct-lwt"
  "io-page"
  "io-page-unix"
  "lwt" {>= "2.7.0"}
  "mirage-types-lwt" {>= "3.0.0"}
  "mirage-block-lwt"
  "mirage-block-unix"
  "nbd"
  "lwt_ssl"
  "ssl"
]
build: ["jbuilder" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/xapi-project/nbd.git"
url {
  src: "https://github.com/xapi-project/nbd/archive/v4.0.0+beta1.tar.gz"
  checksum: "md5=3d3b3cfc8193ab9b09a2c4a904e19195"
}
